--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="68efa0">  <td>23/01/25 11:09:45</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeTest()[pri:0, instance:com.dvops.maven.eclipse.NewTest@65466a6a]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="68efa0">  <td>23/01/25 11:09:46</td>   <td>1516</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.checkId()[pri:0, instance:com.dvops.maven.eclipse.NewTest@65466a6a]">checkId</td> 
-  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="68efa0">  <td>23/01/25 11:09:48</td>   <td>2840</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.checkTitle()[pri:0, instance:com.dvops.maven.eclipse.NewTest@65466a6a]">checkTitle</td> 
-  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="68efa0">  <td>23/01/25 11:09:48</td>   <td>2909</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.afterTest()[pri:0, instance:com.dvops.maven.eclipse.NewTest@65466a6a]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="7ffa75">  <td>23/02/03 15:29:56</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeTest()[pri:0, instance:com.dvops.maven.eclipse.NewTest@503d687a]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@48208774</td>   <td></td> </tr>
+<tr bgcolor="7ffa75">  <td>23/02/03 15:29:57</td>   <td>1103</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.checkId()[pri:0, instance:com.dvops.maven.eclipse.NewTest@503d687a]">checkId</td> 
+  <td>main@48208774</td>   <td></td> </tr>
+<tr bgcolor="7ffa75">  <td>23/02/03 15:29:59</td>   <td>3708</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.checkTitle()[pri:0, instance:com.dvops.maven.eclipse.NewTest@503d687a]">checkTitle</td> 
+  <td>main@48208774</td>   <td></td> </tr>
+<tr bgcolor="7ffa75">  <td>23/02/03 15:29:59</td>   <td>3774</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.afterTest()[pri:0, instance:com.dvops.maven.eclipse.NewTest@503d687a]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@48208774</td>   <td></td> </tr>
 </table>
