Pushing again - Recreated SendFeedbackServlet
- Created Test SendFeedbackServletTest for Junit

--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7ffa75">  <td>23/02/03 15:29:59</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.afterTest()[pri:0, instance:com.dvops.maven.eclipse.NewTest@503d687a]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@48208774</td>   <td></td> </tr>
-<tr bgcolor="7ffa75">  <td>23/02/03 15:29:56</td>   <td>-3774</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeTest()[pri:0, instance:com.dvops.maven.eclipse.NewTest@503d687a]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@48208774</td>   <td></td> </tr>
-<tr bgcolor="7ffa75">  <td>23/02/03 15:29:57</td>   <td>-2671</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.checkId()[pri:0, instance:com.dvops.maven.eclipse.NewTest@503d687a]">checkId</td> 
-  <td>main@48208774</td>   <td></td> </tr>
-<tr bgcolor="7ffa75">  <td>23/02/03 15:29:59</td>   <td>-66</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.checkTitle()[pri:0, instance:com.dvops.maven.eclipse.NewTest@503d687a]">checkTitle</td> 
-  <td>main@48208774</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>23/02/04 04:11:37</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.afterTest()[pri:0, instance:com.dvops.maven.eclipse.NewTest@6c779568]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@370370379</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>23/02/04 04:11:34</td>   <td>-2804</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeTest()[pri:0, instance:com.dvops.maven.eclipse.NewTest@6c779568]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@370370379</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>23/02/04 04:11:35</td>   <td>-1516</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.checkId()[pri:0, instance:com.dvops.maven.eclipse.NewTest@6c779568]">checkId</td> 
+  <td>main@370370379</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>23/02/04 04:11:37</td>   <td>-82</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.checkTitle()[pri:0, instance:com.dvops.maven.eclipse.NewTest@6c779568]">checkTitle</td> 
+  <td>main@370370379</td>   <td></td> </tr>
 </table>
