--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="88bd7e">  <td>23/02/04 04:11:34</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeTest()[pri:0, instance:com.dvops.maven.eclipse.NewTest@6c779568]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@370370379</td>   <td></td> </tr>
-<tr bgcolor="88bd7e">  <td>23/02/04 04:11:35</td>   <td>1288</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.checkId()[pri:0, instance:com.dvops.maven.eclipse.NewTest@6c779568]">checkId</td> 
-  <td>main@370370379</td>   <td></td> </tr>
-<tr bgcolor="88bd7e">  <td>23/02/04 04:11:37</td>   <td>2722</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.checkTitle()[pri:0, instance:com.dvops.maven.eclipse.NewTest@6c779568]">checkTitle</td> 
-  <td>main@370370379</td>   <td></td> </tr>
-<tr bgcolor="88bd7e">  <td>23/02/04 04:11:37</td>   <td>2804</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.afterTest()[pri:0, instance:com.dvops.maven.eclipse.NewTest@6c779568]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@370370379</td>   <td></td> </tr>
+<tr bgcolor="da768f">  <td>23/02/04 22:03:25</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeTest()[pri:0, instance:com.dvops.maven.eclipse.NewTest@4ef37659]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@460201727</td>   <td></td> </tr>
+<tr bgcolor="da768f">  <td>23/02/04 22:03:27</td>   <td>1144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.checkId()[pri:0, instance:com.dvops.maven.eclipse.NewTest@4ef37659]">checkId</td> 
+  <td>main@460201727</td>   <td></td> </tr>
+<tr bgcolor="da768f">  <td>23/02/04 22:03:27</td>   <td>1301</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.checkTitle()[pri:0, instance:com.dvops.maven.eclipse.NewTest@4ef37659]">checkTitle</td> 
+  <td>main@460201727</td>   <td></td> </tr>
+<tr bgcolor="da768f">  <td>23/02/04 22:03:27</td>   <td>1350</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.afterTest()[pri:0, instance:com.dvops.maven.eclipse.NewTest@4ef37659]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@460201727</td>   <td></td> </tr>
 </table>
