--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="88bd7e">  <td>23/02/04 04:11:34</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeTest()[pri:0, instance:com.dvops.maven.eclipse.NewTest@6c779568]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@370370379</td>   <td></td> </tr>
-<tr bgcolor="88bd7e">  <td>23/02/04 04:11:35</td>   <td>1288</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.checkId()[pri:0, instance:com.dvops.maven.eclipse.NewTest@6c779568]">checkId</td> 
-  <td>main@370370379</td>   <td></td> </tr>
-<tr bgcolor="88bd7e">  <td>23/02/04 04:11:37</td>   <td>2722</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.checkTitle()[pri:0, instance:com.dvops.maven.eclipse.NewTest@6c779568]">checkTitle</td> 
-  <td>main@370370379</td>   <td></td> </tr>
-<tr bgcolor="88bd7e">  <td>23/02/04 04:11:37</td>   <td>2804</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.afterTest()[pri:0, instance:com.dvops.maven.eclipse.NewTest@6c779568]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@370370379</td>   <td></td> </tr>
+<tr bgcolor="da768f">  <td>23/02/05 00:08:50</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeTest()[pri:0, instance:com.dvops.maven.eclipse.NewTest@4e268090]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@585324508</td>   <td></td> </tr>
+<tr bgcolor="da768f">  <td>23/02/05 00:08:52</td>   <td>1537</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.checkLinkAgree()[pri:0, instance:com.dvops.maven.eclipse.NewTest@4e268090]">checkLinkAgree</td> 
+  <td>main@585324508</td>   <td></td> </tr>
+<tr bgcolor="da768f">  <td>23/02/05 00:08:53</td>   <td>2754</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.checkLinkDirectToLoginjsp()[pri:0, instance:com.dvops.maven.eclipse.NewTest@4e268090]">checkLinkDirectToLoginjsp</td> 
+  <td>main@585324508</td>   <td></td> </tr>
+<tr bgcolor="da768f">  <td>23/02/05 00:08:54</td>   <td>3522</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.checkLinkSignup()[pri:0, instance:com.dvops.maven.eclipse.NewTest@4e268090]">checkLinkSignup</td> 
+  <td>main@585324508</td>   <td></td> </tr>
+<tr bgcolor="da768f">  <td>23/02/05 00:08:54</td>   <td>3670</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.checkTitle()[pri:0, instance:com.dvops.maven.eclipse.NewTest@4e268090]">checkTitle</td> 
+  <td>main@585324508</td>   <td></td> </tr>
+<tr bgcolor="da768f">  <td>23/02/05 00:08:54</td>   <td>4025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.directToRegisterjsp()[pri:0, instance:com.dvops.maven.eclipse.NewTest@4e268090]">directToRegisterjsp</td> 
+  <td>main@585324508</td>   <td></td> </tr>
+<tr bgcolor="da768f">  <td>23/02/05 00:08:55</td>   <td>4376</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.afterTest()[pri:0, instance:com.dvops.maven.eclipse.NewTest@4e268090]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@585324508</td>   <td></td> </tr>
 </table>
