--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">3,004</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">4,529</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.dvops.maven.eclipse.NewTest</td><td><a href="#m0">checkId</a></td><td rowspan="1">1675455095700</td><td rowspan="1">1431</td></tr><tr class="passedeven"><td><a href="#m1">checkTitle</a></td><td rowspan="1">1675455097134</td><td rowspan="1">78</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">com.dvops.maven.eclipse.NewTest</td><td><a href="#m0">checkLinkAgree</a></td><td rowspan="1">1675526932227</td><td rowspan="1">1214</td></tr><tr class="passedeven"><td><a href="#m1">checkLinkDirectToLoginjsp</a></td><td rowspan="1">1675526933444</td><td rowspan="1">767</td></tr><tr class="passedeven"><td><a href="#m2">checkLinkSignup</a></td><td rowspan="1">1675526934212</td><td rowspan="1">147</td></tr><tr class="passedeven"><td><a href="#m3">checkTitle</a></td><td rowspan="1">1675526934360</td><td rowspan="1">354</td></tr><tr class="passedeven"><td><a href="#m4">directToRegisterjsp</a></td><td rowspan="1">1675526934716</td><td rowspan="1">347</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.dvops.maven.eclipse.NewTest#checkId</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.dvops.maven.eclipse.NewTest#checkTitle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.dvops.maven.eclipse.NewTest#checkLinkAgree</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.dvops.maven.eclipse.NewTest#checkLinkDirectToLoginjsp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.dvops.maven.eclipse.NewTest#checkLinkSignup</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.dvops.maven.eclipse.NewTest#checkTitle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.dvops.maven.eclipse.NewTest#directToRegisterjsp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
