--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\gking\AppData\Local\Temp\testng-eclipse--1924118266\testng-customsuite.xml</span>
+                    <span>C:\Users\gking\AppData\Local\Temp\testng-eclipse-633158996\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">5 methods,   5 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,12 +102,27 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.dvops.maven.eclipse.NewTest" class="method navigator-link" hash-for-method="checkId">checkId</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.dvops.maven.eclipse.NewTest" class="method navigator-link" hash-for-method="checkLinkAgree">checkLinkAgree</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.dvops.maven.eclipse.NewTest" class="method navigator-link" hash-for-method="checkLinkDirectToLoginjsp">checkLinkDirectToLoginjsp</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.dvops.maven.eclipse.NewTest" class="method navigator-link" hash-for-method="checkLinkSignup">checkLinkSignup</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="com.dvops.maven.eclipse.NewTest" class="method navigator-link" hash-for-method="checkTitle">checkTitle</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.dvops.maven.eclipse.NewTest" class="method navigator-link" hash-for-method="directToRegisterjsp">directToRegisterjsp</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -130,9 +145,23 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="checkId">
-                  </a> <!-- checkId -->
-                  <span class="method-name">checkId</span>
+                  <a name="checkLinkAgree">
+                  </a> <!-- checkLinkAgree -->
+                  <span class="method-name">checkLinkAgree</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="checkLinkDirectToLoginjsp">
+                  </a> <!-- checkLinkDirectToLoginjsp -->
+                  <span class="method-name">checkLinkDirectToLoginjsp</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="checkLinkSignup">
+                  </a> <!-- checkLinkSignup -->
+                  <span class="method-name">checkLinkSignup</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -142,12 +171,19 @@
                   <span class="method-name">checkTitle</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="directToRegisterjsp">
+                  </a> <!-- directToRegisterjsp -->
+                  <span class="method-name">directToRegisterjsp</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\gking\AppData\Local\Temp\testng-eclipse--1924118266\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\gking\AppData\Local\Temp\testng-eclipse-633158996\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -196,20 +232,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'checkId')
+data.setCell(0, 1, 'checkLinkAgree')
 data.setCell(0, 2, 'com.dvops.maven.eclipse.NewTest')
-data.setCell(0, 3, 1431);
+data.setCell(0, 3, 1214);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'checkTitle')
+data.setCell(1, 1, 'checkLinkDirectToLoginjsp')
 data.setCell(1, 2, 'com.dvops.maven.eclipse.NewTest')
-data.setCell(1, 3, 78);
+data.setCell(1, 3, 767);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'checkTitle')
+data.setCell(2, 2, 'com.dvops.maven.eclipse.NewTest')
+data.setCell(2, 3, 354);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'directToRegisterjsp')
+data.setCell(3, 2, 'com.dvops.maven.eclipse.NewTest')
+data.setCell(3, 3, 347);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'checkLinkSignup')
+data.setCell(4, 2, 'com.dvops.maven.eclipse.NewTest')
+data.setCell(4, 3, 147);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -241,16 +289,28 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">checkId</span>
-                <span class="method-start">1294 ms</span>
+                <span class="method-name">checkLinkAgree</span>
+                <span class="method-start">1542 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">checkLinkDirectToLoginjsp</span>
+                <span class="method-start">2759 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">checkLinkSignup</span>
+                <span class="method-start">3527 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">checkTitle</span>
-                <span class="method-start">2728 ms</span>
+                <span class="method-start">3675 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">directToRegisterjsp</span>
+                <span class="method-start">4031 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">afterTest</span>
-                <span class="method-start">2810 ms</span>
+                <span class="method-start">4381 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
